[WEEK050] String template expressions and `STR` template processor